--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
 			<version>${slf4j.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-swing</artifactId>
+			<version>${javafx.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
