--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<groupId>com.avereon</groupId>
 	<artifactId>cameo</artifactId>
-	<version>1.1</version>
+	<version>2.0</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>Cameo</name>
@@ -63,6 +63,12 @@
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-swing</artifactId>
 			<version>${javafx.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sf.image4j</groupId>
+			<artifactId>image4j</artifactId>
+			<version>0.7.2</version>
 		</dependency>
 
 		<dependency>
