--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 
 	<pluginRepositories>
 		<pluginRepository>
-			<id>avn</id>
+			<id>avn-plugin</id>
 			<url>https://repo.avereon.com/avn</url>
 		</pluginRepository>
 	</pluginRepositories>
@@ -47,7 +47,7 @@
 	<properties>
 		<!-- Runtime dependencies -->
 		<!--java.version defined in parent pom -->
-		<javafx.version>11.0.2</javafx.version>
+		<javafx.version>13-ea+9</javafx.version>
 		<slf4j.version>1.8.0-beta2</slf4j.version>
 	</properties>
 
