--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,15 @@ cache:
   directories:
     - $HOME/.m2
 
+addons:
+  apt:
+    packages:
+      - xvfb
+
 before_install:
   - install-jdk.sh --url 'https://api.adoptopenjdk.net/v2/binary/releases/openjdk11?openjdk_impl=hotspot&os=linux&arch=x64&release=latest&heap_size=normal&type=jdk'
 
 install:
-  - sudo apt install xvfb
   - Xvfb :2 &
 
 deploy:
