Attempt to use jdk 11.0.4 on ubuntu bionic

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
+dist: bionic
 language: java
+jdk: openjdk11
 cache:
   directories:
     - $HOME/.m2
@@ -7,9 +9,10 @@ addons:
   apt:
     packages:
       - xvfb
+      - openjdk-11-jdk
 
-before_install:
-  - source install-jdk.sh --url 'https://api.adoptopenjdk.net/v2/binary/releases/openjdk11?openjdk_impl=hotspot&os=linux&arch=x64&release=latest&heap_size=normal&type=jdk'
+#before_install:
+#  - source install-jdk.sh --url 'https://api.adoptopenjdk.net/v2/binary/releases/openjdk11?openjdk_impl=hotspot&os=linux&arch=x64&release=latest&heap_size=normal&type=jdk'
 
 install:
   - Xvfb :2 &
