--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,14 @@
 
 		<dependency>
 			<groupId>com.avereon</groupId>
-			<artifactId>xenon</artifactId>
-			<version>[0.9-SNAPSHOT,)</version>
+			<artifactId>rossa</artifactId>
+			<version>[0.1-SNAPSHOT,)</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.avereon</groupId>
+			<artifactId>venza</artifactId>
+			<version>[0.1-SNAPSHOT,)</version>
 		</dependency>
 
 		<dependency>
