--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
 	<parent>
 		<groupId>com.avereon.pom</groupId>
 		<artifactId>jar</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>3.0.0</version>
 		<relativePath/>
 	</parent>
 
 	<groupId>com.avereon</groupId>
 	<artifactId>cameo</artifactId>
-	<version>2.6-SNAPSHOT</version>
+	<version>2.6</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>Cameo</name>
@@ -45,8 +45,14 @@
 	</pluginRepositories>
 
 	<properties>
+		<!-- Version numbers updated 02 Jul 2020 -->
 		<!-- Runtime dependencies -->
-		<!--java.version defined in parent pom -->
+		<venza.version>0.3</venza.version>
+		<rossa.version>0.3</rossa.version>
+		<image4j.version>0.7.2</image4j.version>
+		<maven.project.version>2.2.1</maven.project.version>
+		<maven.plugin.api.version>3.0</maven.plugin.api.version>
+		<maven.plugin.annotations.version>3.4</maven.plugin.annotations.version>
 		<openjfx.version>14.0.1</openjfx.version>
 		<slf4j.version>1.8.0-beta4</slf4j.version>
 	</properties>
@@ -56,13 +62,13 @@
 		<dependency>
 			<groupId>com.avereon</groupId>
 			<artifactId>venza</artifactId>
-			<version>[0.1-SNAPSHOT,)</version>
+			<version>${venza.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.avereon</groupId>
 			<artifactId>rossa</artifactId>
-			<version>[0.1-SNAPSHOT,)</version>
+			<version>${rossa.version}</version>
 		</dependency>
 
 		<dependency>
@@ -74,27 +80,27 @@
 		<dependency>
 			<groupId>net.sf.image4j</groupId>
 			<artifactId>image4j</artifactId>
-			<version>0.7.2</version>
+			<version>${image4j.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-project</artifactId>
-			<version>2.2.1</version>
+			<version>${maven.project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
-			<version>3.0</version>
+			<version>${maven.plugin.api.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.maven.plugin-tools</groupId>
 			<artifactId>maven-plugin-annotations</artifactId>
-			<version>3.4</version>
+			<version>${maven.plugin.annotations.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
