--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
 	<parent>
 		<groupId>com.avereon.pom</groupId>
 		<artifactId>jar</artifactId>
-		<version>3.0.0</version>
+		<version>3.1.0-SNAPSHOT</version>
 		<relativePath/>
 	</parent>
 
 	<groupId>com.avereon</groupId>
 	<artifactId>cameo</artifactId>
-	<version>2.6</version>
+	<version>2.7-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>Cameo</name>
@@ -47,8 +47,8 @@
 	<properties>
 		<!-- Version numbers updated 02 Jul 2020 -->
 		<!-- Runtime dependencies -->
-		<venza.version>0.3</venza.version>
-		<rossa.version>0.3</rossa.version>
+		<venza.version>[0.4-SNAPSHOT,)</venza.version>
+		<rossa.version>[0.4-SNAPSHOT,)</rossa.version>
 		<image4j.version>0.7.2</image4j.version>
 		<maven.project.version>2.2.1</maven.project.version>
 		<maven.plugin.api.version>3.0</maven.plugin.api.version>
