--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
 	<parent>
 		<groupId>com.avereon.pom</groupId>
 		<artifactId>jar</artifactId>
-		<version>3.1.0-SNAPSHOT</version>
+		<version>3.1.0</version>
 		<relativePath/>
 	</parent>
 
 	<groupId>com.avereon</groupId>
 	<artifactId>cameo</artifactId>
-	<version>2.7-SNAPSHOT</version>
+	<version>2.7</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>Cameo</name>
