--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,8 @@
 		<java.version>11</java.version>
 
 		<!-- Runtime dependencies -->
-		<zerra.version>[0.4-SNAPSHOT,)</zerra.version>
-		<zenna.version>[0.4-SNAPSHOT,)</zenna.version>
+		<zerra.version>[0.4,)</zerra.version>
+		<zenna.version>[0.4,)</zenna.version>
 		<image4j.version>0.7.2</image4j.version>
 		<maven.project.version>2.2.1</maven.project.version>
 		<maven.plugin.api.version>3.0</maven.plugin.api.version>
