--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
 	<parent>
 		<groupId>com.avereon.pom</groupId>
 		<artifactId>jar</artifactId>
-		<version>3.1.0</version>
+		<version>3.2.0-SNAPSHOT</version>
 		<relativePath/>
 	</parent>
 
 	<groupId>com.avereon</groupId>
 	<artifactId>cameo</artifactId>
-	<version>2.7</version>
+	<version>2.8-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>Cameo</name>
@@ -52,8 +52,8 @@
 		<java.version>11</java.version>
 
 		<!-- Runtime dependencies -->
-		<zerra.version>[0.4,)</zerra.version>
-		<zenna.version>[0.4,)</zenna.version>
+		<zerra.version>[0.5-SNAPSHOT,)</zerra.version>
+		<zenna.version>[0.5-SNAPSHOT,)</zenna.version>
 		<image4j.version>0.7.2</image4j.version>
 		<maven.project.version>2.2.1</maven.project.version>
 		<maven.plugin.api.version>3.0</maven.plugin.api.version>
