--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>com.avereon.pom</groupId>
 		<artifactId>jar</artifactId>
-		<version>3.2.0</version>
+		<version>3.3.3</version>
 		<relativePath/>
 	</parent>
 
@@ -52,8 +52,7 @@
 		<java.version>11</java.version>
 
 		<!-- Runtime dependencies -->
-		<zerra.version>0.7</zerra.version>
-		<zenna.version>0.7</zenna.version>
+		<zenna.version>0.8-SNAPSHOT</zenna.version>
 		<image4j.version>0.7.2</image4j.version>
 		<maven.project.version>2.2.1</maven.project.version>
 		<maven.plugin.api.version>3.0</maven.plugin.api.version>
@@ -63,12 +62,6 @@
 	</properties>
 
 	<dependencies>
-
-		<dependency>
-			<groupId>com.avereon</groupId>
-			<artifactId>zerra</artifactId>
-			<version>${zerra.version}</version>
-		</dependency>
 
 		<dependency>
 			<groupId>com.avereon</groupId>
