--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
 	<parent>
 		<groupId>com.avereon.pom</groupId>
 		<artifactId>jar</artifactId>
-		<version>3.3.3</version>
+		<version>3.5.0</version>
 		<relativePath/>
 	</parent>
 
 	<groupId>com.avereon</groupId>
 	<artifactId>cameo</artifactId>
-	<version>2.9</version>
+	<version>2.10</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>Cameo</name>
@@ -45,20 +45,20 @@
 	</pluginRepositories>
 
 	<properties>
-		<!-- Version numbers updated 02 Jul 2020 -->
+		<!-- Version numbers updated 07 Mar 2023 -->
 
 		<!-- Needs to stay at a version compatible with all maven builds -->
 		<!-- Keep consistent with the CI pipeline -->
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 
 		<!-- Runtime dependencies -->
-		<zenna.version>0.8-SNAPSHOT</zenna.version>
+		<zenna.version>0.9-SNAPSHOT</zenna.version>
 		<image4j.version>0.7.2</image4j.version>
 		<maven.project.version>2.2.1</maven.project.version>
-		<maven.plugin.api.version>3.0</maven.plugin.api.version>
-		<maven.plugin.annotations.version>3.4</maven.plugin.annotations.version>
-		<openjfx.version>14.0.1</openjfx.version>
-		<slf4j.version>1.8.0-beta4</slf4j.version>
+		<maven.plugin.api.version>3.9.0</maven.plugin.api.version>
+		<maven.plugin.annotations.version>3.8.1</maven.plugin.annotations.version>
+		<openjfx.version>19.0.2</openjfx.version>
+		<slf4j.version>2.0.6</slf4j.version>
 	</properties>
 
 	<dependencies>
@@ -127,7 +127,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.1.1</version>
 				<executions>
 					<execution>
 						<id>copy</id>
@@ -146,7 +145,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-plugin-plugin</artifactId>
-				<version>3.6.0</version>
 				<executions>
 					<execution>
 						<id>default-descriptor</id>
