--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<groupId>com.avereon</groupId>
 	<artifactId>cameo</artifactId>
-	<version>2.11</version>
+	<version>2.12-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>Cameo</name>
@@ -52,7 +52,7 @@
 		<java.version>21</java.version>
 
 		<!-- Runtime dependencies -->
-		<zenna.version>0.9</zenna.version>
+		<zenna.version>0.11-SNAPSHOT</zenna.version>
 		<image4j.version>0.7.2</image4j.version>
 		<maven.project.version>2.2.1</maven.project.version>
 		<maven.plugin.api.version>3.9.9</maven.plugin.api.version>
