--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>com.avereon.pom</groupId>
 		<artifactId>jar</artifactId>
-		<version>3.6.4</version>
+		<version>3.7-SNAPSHOT</version>
 		<relativePath/>
 	</parent>
 
